SEM-10: correct image height overflow text

--- a/web/sites/sema-design/themes/cleverdrop/src/styles/03_components/_BrandHistory.scss
+++ b/web/sites/sema-design/themes/cleverdrop/src/styles/03_components/_BrandHistory.scss
@@ -87,6 +87,7 @@
     
     @include media-breakpoint-up('md') {
       @include make-cols(4, 5);
+      margin-top: rem(100px);
     }
   }
 }
@@ -140,7 +141,7 @@
 
   @include media-breakpoint-up('md') {
     @include make-cols(4, 7);
-    min-height: rem(220px);
+    min-height: rem(350px);
   }
 }
 
