--- a/web/sites/sema-design/themes/cleverdrop/src/styles/03_components/_ProductFamily.scss
+++ b/web/sites/sema-design/themes/cleverdrop/src/styles/03_components/_ProductFamily.scss
@@ -82,6 +82,7 @@
     
     @include media-breakpoint-up('md') {
       @include make-cols(4, 5);
+      margin-top: rem(100px);
     }
   }
 }
@@ -134,7 +135,7 @@
 
   @include media-breakpoint-up('md') {
     @include make-cols(4, 7);
-    min-height: rem(220px);
+    min-height: rem(350px);
   }
 }
 
